Update Blob Storage and DB

--- a/UploadToServer.Server/UploadToServer.Server.csproj
+++ b/UploadToServer.Server/UploadToServer.Server.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BlobData.cs" />
     <Compile Include="Models\Image.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
