--- a/UploadToServer/UploadToServer/UploadToServer.csproj
+++ b/UploadToServer/UploadToServer/UploadToServer.csproj
@@ -44,6 +44,7 @@
     <Compile Include="MediaPage.xaml.cs">
       <DependentUpon>MediaPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\BlobData.cs" />
     <Compile Include="Models\Image.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
