--- a/UploadToServer/UploadToServer.Droid/packages.config
+++ b/UploadToServer/UploadToServer.Droid/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid80" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
-  <package id="Plugin.Permissions" version="2.0.1" targetFramework="monoandroid80" />
+  <package id="Plugin.Permissions" version="2.1.0" targetFramework="monoandroid70" />
+  <package id="Xam.Plugin.Geolocator" version="4.1.3" targetFramework="monoandroid70" />
   <package id="Xam.Plugin.Media" version="3.1.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid80" />
