--- a/UploadToServer/UploadToServer.Droid/packages.config
+++ b/UploadToServer/UploadToServer.Droid/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid80" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
+  <package id="Plugin.MediaManager" version="0.4.5" targetFramework="monoandroid70" />
+  <package id="Plugin.MediaManager.Forms" version="0.4.5" targetFramework="monoandroid70" />
   <package id="Plugin.Permissions" version="2.1.0" targetFramework="monoandroid70" />
   <package id="Xam.Plugin.Geolocator" version="4.1.3" targetFramework="monoandroid70" />
   <package id="Xam.Plugin.Media" version="3.1.1" targetFramework="monoandroid80" />
@@ -22,5 +24,5 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid80" />
   <package id="Xamarin.Build.Download" version="0.4.3" targetFramework="monoandroid80" />
-  <package id="Xamarin.Forms" version="2.3.3.193" targetFramework="monoandroid80" />
+  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="monoandroid70" />
 </packages>
