--- a/UploadToServer/UploadToServer.iOS/packages.config
+++ b/UploadToServer/UploadToServer.iOS/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="PCLStorage" version="1.0.2" targetFramework="xamarinios10" />
+  <package id="Plugin.MediaManager" version="0.4.5" targetFramework="xamarinios10" />
+  <package id="Plugin.MediaManager.Forms" version="0.4.5" targetFramework="xamarinios10" />
   <package id="Plugin.Permissions" version="2.1.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Geolocator" version="4.1.3" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="3.1.1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.0.0.6482" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
 </packages>
